temp清理后加入user

--- a/rjb/ruoyi-Logistics/src/main/resources/templates/clean/clean/clean.html
+++ b/rjb/ruoyi-Logistics/src/main/resources/templates/clean/clean/clean.html
@@ -2,6 +2,7 @@
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head>
     <th:block th:include="include :: header('Customer列表')" />
+    <meta charset="UTF-8">
 </head>
 <body class="gray-bg">
      <div class="container-div">
