出现网络通信异常是因为java的DATE类型格式与dm的DATETIME类型格式的冲突，将DATE修改为String类型可解决这个问题，但是ruoyi框架中的DATE类型未找到修改办法

--- a/rjb/ruoyi-Logistics/src/main/resources/templates/clean/insertCompany/insertCompany.html
+++ b/rjb/ruoyi-Logistics/src/main/resources/templates/clean/insertCompany/insertCompany.html
@@ -20,7 +20,7 @@
                             </li>
                             <li>
                                 <label>：</label>
-                                <input type="text" name="num"/>
+                                <input type="text" name="customerNum"/>
                             </li>
                             <li>
                                 <label>：</label>
@@ -88,7 +88,7 @@
                     title: ''
                 },
                 {
-                    field: 'num',
+                    field: 'customerNum',
                     title: ''
                 },
                 {
