--- a/rjb/ruoyi-Logistics/src/main/resources/templates/clean/insertCompany/add.html
+++ b/rjb/ruoyi-Logistics/src/main/resources/templates/clean/insertCompany/add.html
@@ -21,7 +21,7 @@
             <div class="form-group">    
                 <label class="col-sm-3 control-label">：</label>
                 <div class="col-sm-8">
-                    <input name="num" class="form-control" type="text">
+                    <input name="customerNum" class="form-control" type="text">
                 </div>
             </div>
             <div class="form-group">    
