--- a/rjb/ruoyi-Logistics/src/main/resources/templates/clean/insertCompany/edit.html
+++ b/rjb/ruoyi-Logistics/src/main/resources/templates/clean/insertCompany/edit.html
@@ -22,7 +22,7 @@
             <div class="form-group">    
                 <label class="col-sm-3 control-label">：</label>
                 <div class="col-sm-8">
-                    <input name="num" th:field="*{num}" class="form-control" type="text">
+                    <input name="customerNum" th:field="*{customerNum}" class="form-control" type="text">
                 </div>
             </div>
             <div class="form-group">    
